--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+@font-face {
+  font-family: 'Rangedit';
+  src: url('/public/fonts/Rangedit/Rangedit.woff'),
+       url('/public/fonts/Rangedit/Rangedit.woff2'); /* IE9 Compat Modes */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'InterVariable';
+  src: url('/public/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf') format('truetype-variations');
+  font-weight: 100 900; /* Adjust based on the font's weight range */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ManropeVariable';
+  src: url('/public/fonts/Manrope/Manrope-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 100 900; /* Adjust based on the font's weight range */
+  font-style: normal;
+}
+
+div {
+  text-align: center;
+  padding: 10% 0 0 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +37,32 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.logo {
+  color: black;
+  font-family: 'Rangedit', sans-serif;
+  margin: 0; 
+  padding: 0;
+  font-size: 32px;
+  height: auto;
+  font-weight: 700;
+  vertical-align: bottom;
+  line-height: 1;
+}
+
+.comingSoon {
+  background: linear-gradient(to right, #1459FA /*  #2F80ED*/, #56CCF2 /* rgb(247, 103, 74), #c43be6, #389af6 */); 
+  
+  /* Make the text color transparent so the backgr
+  
+  ound shows through */
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-family: 'ManropeVariable', sans-serif;
+  font-size: 72px;
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
 }
