--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,10 @@
   font-style: normal;
 }
 
-div {
+.comingSoonContainer {
   text-align: center;
-  padding: 10% 0 0 0;
+  vertical-align: center;
+  margin: 15% 0 0 0;
 }
 
 body {
@@ -42,17 +43,17 @@ code {
 .logo {
   color: black;
   font-family: 'Rangedit', sans-serif;
-  margin: 0; 
+  margin: 40px 0 0 50px; 
   padding: 0;
-  font-size: 32px;
+  font-size: 46px;
   height: auto;
-  font-weight: 700;
+  font-weight: 600;
   vertical-align: bottom;
   line-height: 1;
 }
 
 .comingSoon {
-  background: linear-gradient(to right, #1459FA /*  #2F80ED*/, #56CCF2 /* rgb(247, 103, 74), #c43be6, #389af6 */); 
+  background: linear-gradient(to right, #1459FA /*  #2F80ED*/, #56CCF2, #f2be56, #f26056 /* rgb(247, 103, 74), #c43be6, #389af6 */); 
   
   /* Make the text color transparent so the backgr
   
@@ -61,8 +62,18 @@ code {
   background-clip: text;
   color: transparent;
   font-family: 'ManropeVariable', sans-serif;
-  font-size: 72px;
+  font-size: 6rem;
   margin: 0;
   padding: 0;
   line-height: 1.5;
+  font-weight: 900;
+}
+
+@media only screen and (max-width: 900px) {
+  .comingSoonContainer {
+    margin: 40% 0 0 0;
+  }
+  .comingSoon {
+    font-size: 4rem;
+  }
 }
